Fix z-index for navbar

--- a/angular/core/components/notifications/notifications.scss
+++ b/angular/core/components/notifications/notifications.scss
@@ -32,10 +32,6 @@
   color: $primary-text-color;
 }
 
-.notifications__dropdown {
-  margin-top: 8px !important;
-}
-
 .navbar-notifications__blank-message {
   text-align: center;
   margin: 10px 0;
